--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("https://source.unsplash.com/1600x900/?landscape");
+    background-image: url("https://images.unsplash.com/photo-1417325384643-aac51acc9e5d?q=75&fm=jpg");
     background-size: cover;
     height: 100vh; /* ALTURA */
     width: 100vw; /* LARGURA */
